Fixes #3885: In MyRestyaboards iOS app, Check the settings, pagination and options alignment in admin users page issue fixed

--- a/client/css/custom-responsive.less
+++ b/client/css/custom-responsive.less
@@ -582,6 +582,11 @@
 			.admin-boards-visibility-button {
 				width: 66px;
 			}
+			.pagination-footer-block {
+				.pagination-boxes {
+					margin-top: 10px !important;
+				}
+			}
 		}
 		.dockmodal {
 			bottom: 32px !important;
